# HelperBussinesBot

./: README.md  pyproject.toml
bot/: bot.py  logger.py
bot/service/: appointments_service.py  user_service.py
migrations/: env.py
migrations/versions/: 279feaac408e_.py  6599cea078b7_.py
src/: config.py  db.py  logger.py  main.py
src/api/auth/: exceptions.py  models.py  repository.py  router.py
src/appointments/: exceptions.py  models.py  repository.py  router.py  schemas.py  utilits.py
src/auth/: models.py  repository.py  router.py  schemas.py
