[project]
name = "helperbussinesbot"
version = "0.1.0"
description = ""
authors = [
    {name = "N1chegons",email = "krikignatenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "fastapi[all] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "timezonefinder (>=8.2.1,<9.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
